--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,17 +1,38 @@
 project:
   type: website
+  # resources: 
+  #   - "resume.pdf"
+
+email-obfuscation: javascript
+
+lang: en-US
 
 website:
-  title: "mywebsite"
+  favicon: icon.png
+  twitter-card: true
+  site-url: https://nikola-grubor.github.io
+  title: "Nikola N. Grubor"
   navbar:
+    tools:
+      - icon: twitter
+        href: ""
+      - icon: github
+        href: https://github.com/nikola-grubor
+      - icon: linkedin
+        href: https://www.linkedin.com/in/herr-grubor/
+    background: primary
+    search: true
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - href: myblog/index.qmd
+        text: Blog
 
 format:
   html:
-    theme: cosmo
+    theme: 
+      light: flatly
+      dark: darkly
     css: styles.css
     toc: true
 
